client/src/app/menu/menu.component.scss
@import '_variables';
@import '_mixins';

.menu-wrapper {
  position: fixed;
  height: calc(100vh - #{$header-height});
  padding: 0;
  width: $menu-width;
  z-index: 10000;
}

menu {
  background-color: var(--menuBackgroundColor);
  margin: 0;
  padding: 0;
  height: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  color: var(--menuForegroundColor);
  display: flex;
  flex-direction: column;
  width: 100%;

  &:focus, &:hover {
    overflow-y: auto;
  }

  .top-menu {
    flex-grow: 1;
    width: $menu-width;
  }

  .logged-in-block {
    height: 100px;
    background-color: rgba(255, 255, 255, 0.15);
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 35px;

    .logged-in-info {
      flex-grow: 1;

      .logged-in-username {
        font-size: 16px;
        font-weight: $font-semibold;
        color: var(--menuForegroundColor);
        cursor: pointer;

        @include disable-default-a-behaviour;
      }

      .logged-in-email {
        font-size: 13px;
        color: #C6C6C6;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        max-width: 140px;
      }
    }

    .logged-in-more {
      margin-right: 20px;

      .glyphicon {
        cursor: pointer;
        font-size: 18px;

        &::after {
          border: none;
        }
      }
    }
  }

  .button-block {
    margin: 30px 25px 35px 25px;

    .login-button {
      @include peertube-button-link;
      @include orange-button;

      display: block;
      width: 100%;
      margin-bottom: 10px;
    }

    .create-account-button {
      @include peertube-button-link;

      display: block;
      width: 100%;

      color: #fff;
      background-color: rgba(255, 255, 255, 0.25);

      &:hover {
        background-color: rgba(255, 255, 255, 0.28);
      }
    }
  }

  .block-title {
    text-transform: uppercase;
    font-weight: $font-bold; // Bold
    font-size: 13px;
    margin-bottom: 25px;
    margin-left: 26px;
  }

  .panel-block {
    margin-bottom: 45px;

    a {
      display: flex;
      align-items: center;
      padding-left: $menu-lateral-padding;
      color: var(--menuForegroundColor);
      cursor: pointer;
      height: 40px;
      font-size: 16px;
      transition: background-color .1s ease-in-out;
      @include disable-default-a-behaviour;

      &.active {
        background-color: rgba(255, 255, 255, 0.15);
      }

      &:hover, &.focus-visible {
        background-color: rgba(255, 255, 255, 0.10);
      }

      .icon {
        @include icon(22px);

        margin-right: 18px;

        &.icon-videos-subscriptions {
          position: relative;
          top: -1px;
          background-image: url('../../assets/images/menu/subscriptions.svg');
        }

        &.icon-videos-overview {
          position: relative;
          background-image: url('../../assets/images/menu/globe.svg');
        }

        &.icon-videos-trending {
          position: relative;
          top: -1px;
          background-image: url('../../assets/images/menu/trending.svg');
        }

        &.icon-videos-recently-added {
          width: 23px;
          height: 23px;
          background-image: url('../../assets/images/menu/recently-added.svg');
        }

        &.icon-videos-local {
          width: 23px;
          height: 23px;

          position: relative;
          top: -1px;

          background-image: url('../../assets/images/menu/home.svg');
        }

        &.icon-administration {
          width: 23px;
          height: 23px;

          background-image: url('../../assets/images/menu/administration.svg');
        }

        &.icon-about  {
          width: 23px;
          height: 23px;

          background-image: url('../../assets/images/menu/about.svg');
        }
      }
    }
  }

  .footer {
    padding-bottom: 15px;
    padding-left: $menu-lateral-padding;
    padding-right: $menu-lateral-padding;
    width: $menu-width;

    .language, .shortcuts, .color-palette {
      display: inline-block;
      color: $menu-bottom-color;
      cursor: pointer;
      font-size: 12px;
      font-weight: $font-semibold;

      .icon {
        @include disable-outline;
        @include icon(28px);
        opacity: 0.9;

        &.icon-language  {
          position: relative;
          top: -1px;
          width: 28px;
          height: 24px;

          background-image: url('../../assets/images/menu/language.png');
        }

        &.icon-shortcuts  {
          position: relative;
          top: -1px;
          width: 24px;
          height: 24px;

          background-image: url('../../assets/images/menu/keyboard.png');
          background-color: #fff;
          filter: invert(100%);
        }

        &.icon-moonsun  {
          margin-left: 10px;
          position: relative;
          top: -1px;
          width: 24px;
          height: 24px;

          background-image: url('../../assets/images/menu/moonsun.svg');
        }

        &:hover {
          opacity: 1;
        }
      }
    }
  }
}

@media screen and (max-width: $mobile-view) {
  .menu-wrapper {
    width: 100% !important;
  }

  .top-menu, .footer {
    width: 100% !important;
  }
}

